<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:padding="10dp">
    <TextView
        android:id="@+id/item_ads_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="孙尚香"/>
    <TextView
        android:id="@+id/item_ads_tv_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@id/item_ads_tv_name"
        android:layout_marginStart="20dp"
        android:text="19150932003"/>
    <TextView
        android:id="@+id/item_ads_tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/item_ads_tv_name"
        android:textColor="@color/black"
        android:text="四川成都市"/>
    <TextView
        android:id="@+id/item_ads_tv_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_ads_tv_city"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_alignBottom="@id/item_ads_tv_city"
        android:text="|"
        />
    <TextView
        android:id="@+id/item_ads_tv_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/item_ads_tv_name"
        android:layout_toEndOf="@id/item_ads_tv_line1"
        android:textColor="@color/black"
        android:text="莲花小区"/>
    <TextView
        android:id="@+id/item_ads_tv_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/item_ads_tv_city"
        android:background="@color/grey"/>

    <RadioButton
        android:id="@+id/item_ads_rb_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_ads_tv_line2"
        android:focusable="false"
        android:text="@string/unsetdefault" />
    <TextView
        android:id="@+id/item_ads_tv_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignBaseline="@id/item_ads_rb_default"
        android:textColor="@color/darkgrey"
        android:text="@string/update"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/item_ads_tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignBaseline="@id/item_ads_rb_default"
        android:textColor="@color/darkgrey"
        android:text="@string/delete"
        android:layout_toStartOf="@id/item_ads_tv_modify"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/item_ads_tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignBaseline="@id/item_ads_rb_default"
        android:textColor="@color/darkgrey"
        android:text="@string/copy"
        android:layout_toStartOf="@id/item_ads_tv_delete"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/item_ads_tv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignBaseline="@id/item_ads_rb_default"
        android:textColor="@color/darkgrey"
        android:text="@string/settop"
        android:layout_toStartOf="@id/item_ads_tv_copy"
        android:layout_marginEnd="20dp"/>
</RelativeLayout>